projects/examples/source/10.39.cpp
///////////////////////////////////////////////////////////////////////////////////////////////////

// chapter : Containers

///////////////////////////////////////////////////////////////////////////////////////////////////

// section : Associative Containers

///////////////////////////////////////////////////////////////////////////////////////////////////

// content : Associative Containers
//
// content : Containers std::map and std::multimap
//
// content : In-Place Constructors
//
// content : Object std::piecewise_construct
//
// content : Function std::forward_as_tuple
//
// content : Microbenchmarking

///////////////////////////////////////////////////////////////////////////////////////////////////

#include <map>
#include <string>
#include <tuple>
#include <utility>

///////////////////////////////////////////////////////////////////////////////////////////////////

#include <benchmark/benchmark.h>

///////////////////////////////////////////////////////////////////////////////////////////////////

void test(benchmark::State & state) 
{
	auto argument = state.range(0);

	std::map < int, std::string > map;

	map[1] = "aaaaa";

    for (auto element : state)
    {
        switch (argument)
		{
			case 1 : { map.emplace(std::make_pair(1, std::string(1 << 10, 'a'))); break; }

			case 2 : { map.emplace(               1, std::string(1 << 10, 'a') ); break; }

		//	case 3 : { map.emplace(               1,             1 << 10, 'a'  ); break; } // error

			case 4 :
			{
				map.emplace
				(
					std::piecewise_construct,

					std::forward_as_tuple(1),

					std::forward_as_tuple(1 << 10, 'a')
				);

				break;
			}

			case 5 :
			{
				map.try_emplace(1, 1 << 10, 'a');
			}
		}

        benchmark::DoNotOptimize(map);
    }
}

///////////////////////////////////////////////////////////////////////////////////////////////////

BENCHMARK(test)->Arg(1)->Arg(2)->Arg(4)->Arg(5);

///////////////////////////////////////////////////////////////////////////////////////////////////

int main()
{
	benchmark::RunSpecifiedBenchmarks();
}

///////////////////////////////////////////////////////////////////////////////////////////////////